<resources>
    <string name="app_name">Battleship</string>
    <string name="action_settings">Settings</string>

    <string name="game_title">Battleship</string>
    <string name="game_blurb">Win this war!</string>

    <string name="inv_popup_text">Incoming invitation!</string>

    <string name="signing_in">Signing in with Google</string>
    <string name="signing_out">Signing out</string>
    <string name="single_player">Single player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="multi_player">Multi player</string>
    <string name="mult_player_explanation">Compete online &amp; Kick some asses!</string>
    <string name="highscore">High score</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait...</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="dismiss">Dismiss</string>
    <string name="your_score">Your score:</string>
    <string name="error">Error</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>

    <string name="multiplayer_ready">Locked and Loaded</string>


    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>


    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>

    <string name="title_activity_highscore">High scores</string>

    <string name="hello_world">Hello world!</string>
    <string name="opponentStatusReady">Opponent ready</string>
    <string name="opponentStatusPlacingShip">Opponent placing ship</string>
    <string name="turnYou">Your turn</string>
    <string name="turnEnemy">Enemy turn</string>
    <string name="YouWon">You Won</string>
    <string name="YouLose">You Lose</string>
    <string name="waitingForOponent">Waiting for oponent...</string>
    <string name="GooglePlayBlurb">GooglePlay is required for multiplayer.</string>
    <string name="title_activity_game_setup">GameSetupActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_multiplayer">MultiplayerActivity</string>
    <string name="highscore_header_date">Date of score</string>
    <string name="highscore_header_score">Score</string>
    <string name="highscore_header_place">Place</string>
    <string name="game_opponent_left">Sorry, opponent player has left the game!</string>
</resources>
