<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/battleship_bg">


    <TextView android:text="@string/game_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp"
        android:theme="@style/GameTitle" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:gravity="fill_vertical"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="160dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/multi_player"
            android:id="@+id/btnStartMulitplayer"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/single_player"
            android:id="@+id/btnStartSingleplayer"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:enabled="false"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/highscore"
            android:id="@+id/btnHighscores"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
        </LinearLayout>
</RelativeLayout>
