<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/battleship_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.hslu.mpbro15.team10.battleship.activities.HighscoreActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/title_activity_highscore"
        android:theme="@style/GameTitle" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:layout_above="@+id/btnResetHighscores">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/scorePoints"
                android:text="@string/highscore_header_date" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="false"
                android:gravity="end"
                android:textAlignment="textEnd"
                android:text="@string/highscore_header_score" />
        </RelativeLayout>

        <ListView
            android:id="@+id/highscoreList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_dark"
            android:headerDividersEnabled="true"
            android:nestedScrollingEnabled="true"
            android:padding="1dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:smoothScrollbar="true" />/>
    </LinearLayout>

    <Button
        android:id="@+id/btnResetHighscores"
        style="@style/MainScreenButton"
        android:text="reset highscores"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
